--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-M24TL3H\\SQLEXPRESS03; initial catalog=StoreDatabase;uid=as;pwd=123;TrustServerCertificate=true;"
+    "Redis": "localhost"
+  },
+  "ApiUrl": "https://localhost:44349/"
 }
