-Backend identity işlemleri tamamlandı. _Validation işlemleri yapıldı. -Swagger authorition opt entegre edildi

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,5 +10,12 @@
     "DefaultConnection": "Data Source=DESKTOP-M24TL3H\\SQLEXPRESS03; initial catalog=StoreDatabase;uid=as;pwd=123;TrustServerCertificate=true;",
     "Redis": "localhost"
   },
+  "Token": {
+    "Key": "this is my custom Secret key for authentication super secret key",
+    "Issuser": "https://localhost:44349/"
+  },
   "ApiUrl": "https://localhost:44349/"
+  //"ApiUrl": "https://localhost:7230"
 }
+
+//https://localhost:7230
