--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "ngx-bootstrap": "^12.0.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xng-breadcrumb": "^10.0.2",
